Version 5.0.45 - 2022-02-16
* Bug fixes (see mercurial logs for details)

Version 5.0.44 - 2022-02-01
* Bug fixes (see mercurial logs for details)

Version 5.0.43 - 2022-01-01
* Bug fixes (see mercurial logs for details)

Version 5.0.42 - 2021-12-03
* Bug fixes (see mercurial logs for details)

Version 5.0.41 - 2021-11-04
* Bug fixes (see mercurial logs for details)

Version 5.0.40 - 2021-10-15
* Bug fixes (see mercurial logs for details)

Version 5.0.39 - 2021-10-01
* Bug fixes (see mercurial logs for details)

Version 5.0.38 - 2021-09-16
* Bug fixes (see mercurial logs for details)

Version 5.0.37 - 2021-09-01
* Bug fixes (see mercurial logs for details)

Version 5.0.36 - 2021-06-17
* Bug fixes (see mercurial logs for details)

Version 5.0.35 - 2021-05-15
* Bug fixes (see mercurial logs for details)

Version 5.0.34 - 2021-04-02
* Bug fixes (see mercurial logs for details)

Version 5.0.33 - 2021-02-12
* Bug fixes (see mercurial logs for details)
* Use safe_join in SharedDataMiddlewareIndex (issue10068)

Version 5.0.32 - 2021-02-01
* Bug fixes (see mercurial logs for details)

Version 5.0.31 - 2021-01-01
* Bug fixes (see mercurial logs for details)

Version 5.0.30 - 2020-12-02
* Bug fixes (see mercurial logs for details)

Version 5.0.29 - 2020-11-11
* Bug fixes (see mercurial logs for details)

Version 5.0.28 - 2020-10-18
* Bug fixes (see mercurial logs for details)

Version 5.0.27 - 2020-10-02
* Bug fixes (see mercurial logs for details)

Version 5.0.26 - 2020-09-16
* Bug fixes (see mercurial logs for details)

Version 5.0.25 - 2020-08-02
* Bug fixes (see mercurial logs for details)

Version 5.0.24 - 2020-07-16
* Bug fixes (see mercurial logs for details)

Version 5.0.23 - 2020-05-18
* Bug fixes (see mercurial logs for details)

Version 5.0.22 - 2020-05-15
* Bug fixes (see mercurial logs for details)

Version 5.0.21 - 2020-05-01
* Bug fixes (see mercurial logs for details)

Version 5.0.20 - 2020-04-04
* Bug fixes (see mercurial logs for details)
